--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shecodes</title>
+    <style></style>
   </head>
-
   <body>
-    <h1>BeeZ Facts!!!</h1>
-    <h2>About</h2>
-    <h3>Contact</h3>
+    <h1><u>BeeZ Facts!!!</u></h1>
+    <button>Save BeeZ Now!!!!</button>
+    <ul>
+      <li>
+        <a class="Org" href="" target=_"blank">Organizations</a>
+      </li>
+    </ul>
 
-    <nav>Contact Us</nav>
-
-    <nav>
-      <a href="index2.html"> Organizations </a>
-    </nav>
-
+    
     <hr />
 
-    <h3>History Of Bees</h3>
+    <h4>History Of Bees</h4>
 
     <p>
       Bees have existed for 130 million years and helped many plants depend on
@@ -62,7 +65,7 @@
       favorite foods!
     </p>
 
-    <h3>Interesting Facts</h3>
+    <h5>Interesting Facts</h5>
 
     <ol>
       <li>There are over 20,000 species of bees in the world.</li>
